Fix image overlap

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -350,11 +350,10 @@ body {
     line-height: 14px;
     letter-spacing: -0.16px;
 }
-.person {
+.person img {
     position: absolute;
     top: 10px;
-    right: 0;
-    transform: translateX(80%);
+    right: -20rem;
 }
 .medium-container {
     position: relative;
@@ -486,11 +485,9 @@ body {
     .vega-logo img {
         width: 30%;
     }
-    .person {
-        transform: translateX(73%);
-    }
     .person img {
         width: 50%;
+        right: -8rem;
     }
     .hide-on-small {
         display: none;
